# Customer-Engagement-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 39192728f69f_.py
app/core/: config.py  database.py  exceptions.py  security.py
app/dependencies/: auth.py  db.py  pagination.py
app/models/: __init__.py  audit.py  auth.py  base.py  blockchain.py  compliance.py  customers.py  donations.py  enums.py  esg.py  notifications.py  org.py  reporting.py  suppliers.py  tokens.py  workforce.py
app/routers/: audit.py  auth.py  blockchain.py  compliance.py  customers.py  donations.py  esg.py  notifications.py  org.py  reporting.py  suppliers.py  tokens.py  workforce.py
app/schemas/: __init__.py  audit.py  auth.py  blockchain.py  common.py  compliance.py  customers.py  donations.py  esg.py  notifications.py  org.py  reporting.py  suppliers.py  tokens.py  workforce.py
app/services/: audit_service.py  auth_service.py  blockchain_service.py  compliance_service.py  customer_service.py  donations_service.py  esg_service.py  export_service.py  leaderboard_service.py  notification_service.py  org_service.py  reporting_service.py  supplier_service.py  token_service.py  workforce_service.py
app/tasks/: compliance_tasks.py  leaderboard_tasks.py  report_tasks.py  scheduler.py
app/utils/: date_helpers.py  file_storage.py
scripts/: seed.py
tests/: conftest.py  test_notification_service.py  test_reporting_service.py  test_supplier_service.py  test_workforce_service.py
