[project]
name = "customer-engagement-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "boto3>=1.42.66",
    "emails>=0.6",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "reportlab>=4.2.0",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
